# dmx

./: .gitignore  README.md  pyproject.toml
dataflow_demux/yggdrasil_realm/: handler.py  recipes.py  steps.py  utils.py
dataflow_dmx/: cli.py
dataflow_dmx/core/adapters/: adapter_list.py  base.py  elembio.py  illumina_mixin.py  illumina_models.py  ont.py
dataflow_dmx/core/flows/: predemux.py
dataflow_dmx/core/utils/: samplesheet_db_manager.py  step.py
dataflow_dmx/yggdrasil_realm/: flowcell_handler.py
dmx/: RunClasses.py  __init__.py  cli.py  dmx.py  setup.py
dmx/prepare/: prepare.py
tests/: test_prepare.py  test_realm_handler.py
