[project]
name = "dmx"
version = "0.0.1"
description = "Helper script for pre- and post-processing of demultiplexing"
authors = [
    { name = "Sara Sjunnebo", email = "sara.sjunnebo@scilifelab.se" },
    { name = "Anastasios Glaros", email = "anastasios.glaros@scilifelab.se" }
]
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "prefect>=3.4.5",
    "pandas",
    "click",
]

[project.optional-dependencies]
ygg = [
    "yggdrasil @ git+https://github.com/NationalGenomicsInfrastructure/Yggdrasil.git@dev",
    "couchdb",
]

dev = [
    "ruff>=0.11.8",
    "pytest",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dataflow_dmx"]
